@startuml
skinparam linetype ortho

' Enumerations
package Analytics {

' Tables
dataclass items {
  * id : BIGSERIAL
  --
  item_type : ItemType
}

dataclass devices {
  * device_id : BIGSERIAL
  --
  device_name : VARCHAR(254)
  latitude : FLOAT
  longitude : FLOAT
  management_hostname : VARCHAR(254)
  metadata : JSONB
  requested_metadata : JSONB
  requested_metrics : JSONB
  available_values : JSONB
  snmp_configuration : JSONB
  FK item_id : BIGINT
}

dataclass devices_playbooks {
  --
  FK device_id: BIGINT
  FK playbook_id: INT
}

dataclass playbooks {
  * playbook_id: SERIAL
  --
  playbook_name: VARCHAR(254)
  is_enabled: BOOLEAN
}



dataclass topology_views {
  * topology_views_id : BIGSERIAL,
  --
  name : VARCHAR(254)
}

dataclass topology_views_member {
    topology_views_id : BIGINT
    item_id           : BIGINT
    position_x : FLOAT = 0.0
    position_y : FLOAT = 0.0
    --
  }

dataclass device_data_sources {
  * device_id : BIGINT
  --
  data_source : DataSource
}

dataclass links {
  * link_id : BIGSERIAL
  --
  side_a : BIGINT
  side_b : BIGINT
  side_a_iface : VARCHAR(254)
  side_b_iface : VARCHAR(254)
  link_type : LinkType
  link_subtype : VARCHAR(254)
  FK item_id : BIGINT
}

dataclass alerts {
  * alert_id : BIGSERIAL
  --
  alert_time : TIMESTAMP
  ack_time : TIMESTAMP
  requires_ack : BOOLEAN
  severity : AlertSeverity
  message : VARCHAR
  ack_actor : VARCHAR
  value : VARCHAR(254)
  FK rule_id : BIGINT
  FK target_id : BIGINT
}

dataclass alert_rules {
  * rule_id : BIGSERIAL
  --
  rule_name : VARCHAR(128)
  requires_ack : BOOLEAN
  rule_definition : JSONB
}

dataclass groups {
  * group_id : BIGSERIAL
  --
  group_name : VARCHAR(254)
  is_display_group : BOOLEAN
  FK item_id : BIGINT
}

dataclass group_members {
  FK group_id : BIGINT
  FK item_id : BIGINT
}

dataclass dashboard {
  * dashboard_id : BIGSERIAL
  --
  dashboard_name : VARCHAR(254)
}

dataclass dashboard_items {
  FK dashboard_id : BIGINT,
  --
  row_start : SMALLBIGINT,
  row_span : SMALLBIGINT,
  col_start: SMALLBIGINT,
  col_span: SMALLBIGINT,
  style_definition: JSONB (unused),
  polling_definition: JSONB,
}

' Relationships with crow's foot cardinality
items ||--|| devices : item_id
items ||--|| links : item_id
items ||--|| groups : item_id

devices ||--o{ device_data_sources : device_id
devices ||--o{ alerts : target_id
devices ||--o{ links : side_a
devices ||--o{ links : side_b

devices ||--o{ devices_playbooks
devices_playbooks ||--o{ playbooks

groups ||--o{ group_members : group_id
items ||--o{ group_members : item_id
dashboard ||--o{ dashboard_items: dashboard_id
alert_rules ||--o{ alerts : rule_id
topology_views ||--o{ topology_views_member : topology_views_id

}
together {
  package syslog {
  dataclass "system_events" as system_events {

    * id : BIGBIGSERIAL
    --
    facility : SyslogFacility
    severity : SyslogSeverity
    from_host : TEXT
    received_at : TIMESTAMPTZ
    process_id : TEXT
    message : TEXT
    message_id : TEXT
    appname : TEXT
    message_tsv : tsvector (generated)
    }
  }


  package ClientIdentity {
    dataclass "ClientIdentity.ack_tokens" as ack_tokens {
      * ack_token : VARCHAR(128)
      --
      ack_actor : VARCHAR
      can_ack: BOOLEAN
      FK telegram_user_id : BIGINT
    }

  package Telegram {
    dataclass "Telegram.receiver" as telegram_receiver {

      * telegram_user_id : BIGINT
      --
      authenticated : BOOLEAN
      subscribed : BOOLEAN
      FK ack_token : VARCHAR(128)
    }

    ' Relationships with crow's foot
    ack_tokens ||--o{ telegram_receiver : "ack_token"
  }

  dataclass "Telegram.unacked_messages" as telegram_unacked {
    --
    alert_id : BIGINT
    chat_peer_id: BIGINT
    message_id: BIGINT
  }
  }

  alerts ||--o{ telegram_unacked : alert_id
}



package types {
  enum ItemType {
      device
      link
      group
  }

  enum LinkType {
      optical
      copper
      wireless
  }

  enum DataSource {
      ssh
      snmp
      icmp
  }

  enum SyslogSeverity {
    emerg
    alert
    crit
    err
    warning
    notice
    info
    debug
  }

  enum AlertSeverity {
      emergency
      alert
      critical
      error
      warning
      notice
      info
      debug
  }

  enum SyslogFacility {
    kern
    user
    mail
    daemon
    auth
    syslog
    lpr
    news
    uucp
    cron
    authpriv
    ftp
    ntp
    security
    console
    solaris
    local0
    local1
    local2
    local3
    local4
    local5
    local6
    local7
  }

}

syslog -d[hidden]-> ClientIdentity
@enduml
